# GoIT_Web2_HW6

./: create_table.sql  database.db  pyproject.toml  seeds.py  select.sql
