[tool.poetry]
name = "goit-web2-hw6"
version = "0.1.0"
description = ""
authors = ["Serhii <90449769+Serhii-Olkhovskyi@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "goit_web2_hw6"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^17.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
